--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-avatar": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
